@@ -53,6 +53,9 @@
         <jaxws:outFaultInterceptors>
             <ref bean="clearAuthenticationMDCInterceptor"/>
         </jaxws:outFaultInterceptors>
+        <jaxws:executor>
+            <ref bean="taskExecutor"/>
+        </jaxws:executor>
     </jaxws:endpoint>
 
 </beans>
