@@ -50,6 +50,9 @@
         <jaxws:outFaultInterceptors>
             <ref bean="clearAuthenticationMDCInterceptor"/>
         </jaxws:outFaultInterceptors>
+        <jaxws:executor>
+            <ref bean="taskExecutor"/>
+        </jaxws:executor>
 
     </jaxws:endpoint>
     <!-- Example ends here -->
