@@ -11,6 +11,7 @@ Domibus 3.3-FR
 - Discard domibus.internal.pull.queue from using the DLQ queue.
 - Possibility to notify the plugins when the message status changes; new method added in the plugin API: eu.domibus.plugin.BackendConnector.messageStatusChanged(eu.domibus.common.MessageStatusChangeEvent)
 - Performance improvements
+- The JMS listeners and the CXF endpoints are executed using the the task executor(managed threads are used in WebLogic and WildFly)
 Domibus 3.3-RC1
 - Configuration of Domibus is done with domibus.properties instead of externalized spring xml files
 - Add the possibility to pull messages
